Feat: deep links for al and mal (#292)
* Marge (#38)

* fix: fixed an grey screen issue and reverted back to old nav bar

* style:  revamped the banner carousel

* feat: full light mode support

* feat: Some manga reader  features  (#261)

* manga reader feat (part 1)

* style: remove unused imports and variables (PR cleanup)

* style: some ui and responsive changes

* fix: fixed the labels. from animes to anime

* fix: fixed backup file not saving on some devices

* fix: fixed overflowing layout in comments

* feat: history editor

* fix: fixed wrong type & id on simkl comments, fixed list not restoring immediately

* build: bump version to v3.0.4 (patch release)

* style: some ui changes

* fix: fixed bottom controls disappearance

* fix: remove redundant calls for sources

* Update changelog for version v3.0.4

* Update default.txt for version v3.0.4

---------

Co-authored-by: Ryan _ <rehank220358@gmail.com>
Co-authored-by: Kamisama <166204452+NITHINSPACETIME@users.noreply.github.com>
Co-authored-by: Git Paneer <actions@github.com>
Co-authored-by: Itsmechinmoy <167056923+itsmechinmoy@users.noreply.github.com>

* Feat : New Visuals popup (#39)

* feat: visual covers + Livechart by @itsmechinmoy

* Poster visuals new style ...

* chore: address Copilot PR reviews (cleanup imports, improve error logging)

* doc: added beta things

* fix : added logic to filter anime-only

* ADDED BETA THING

* Create manual beta build workflow for Android APKs

This workflow builds Android APKs for manual beta distribution, allowing version input and applying beta-specific configurations and assets.

* initial

* Fix info not laoding

* Home button

* Deep Links Support

* fix repo handling

* anymex deeplink support

* Feat/deep links (#43)

* initial

* Fix info not laoding

* Home button

* Deep Links Support

* fix repo handling

* anymex deeplink support

* broke something apparently

* Only open supported links

* Share button + ui

* Revert "Merge branch 'beta-test' into fea

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -94,6 +94,48 @@
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="aniyomi" android:host="add-repo" />
         </intent-filter>  
+
+        <intent-filter android:label="Open AniList Link">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+            <data android:scheme="anymex" />
+            <data android:host="anilist.co" />
+            <data android:host="www.anilist.co" />
+            <data android:host="anilist" />
+            <data android:pathPrefix="/anime/" />
+            <data android:pathPrefix="/manga/" />
+        </intent-filter>
+
+        <intent-filter android:label="Open MAL Link">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+            <data android:scheme="anymex" />
+            <data android:host="myanimelist.net" />
+            <data android:host="www.myanimelist.net" />
+            <data android:host="myanimelist" />
+            <data android:host="mal" />
+            <data android:pathPrefix="/anime/" />
+            <data android:pathPrefix="/manga/" />
+        </intent-filter>
+
+        <intent-filter android:label="Open Simkl Link">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+            <data android:scheme="anymex" />
+            <data android:host="simkl.com" />
+            <data android:host="www.simkl.com" />
+            <data android:host="simkl" />
+            <data android:pathPrefix="/anime/" />
+            <data android:pathPrefix="/tv/" />
+            <data android:pathPrefix="/movie/" />
+            <data android:pathPrefix="/movies/" />
+        </intent-filter>
         
         </activity>
 
