--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     flutter_markdown: ^0.7.6
     flutter_native_splash: ^2.4.4
     flutter_web_auth_2: ^4.0.2
+    flutter_in_app_pip: ^1.0.4
     get: ^4.6.6
     grouped_list: ^6.0.0
     hive: ^2.2.3
