--- a/.github/workflows/handle_extension_issue.yml
+++ b/.github/workflows/handle_extension_issue.yml
@@ -13,22 +13,33 @@ jobs:
           script: |
             const issueBody = context.payload.issue.body;
             const extensionCheckbox = "- [x] If this is an issue with an extension, I should be opening an issue in the extension's repository.";
+            const botMessage = "If this is an issue with an extension, please open an issue in the extension's repository.";
             
             if (issueBody.includes(extensionCheckbox)) {
-              await github.rest.issues.createComment({
+              const { data: comments } = await github.rest.issues.listComments({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.payload.issue.number,
-                body: "If this is an issue with an extension, please open an issue in the extension's repository."
               });
-              
-              await github.rest.issues.update({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.payload.issue.number,
-                state: "closed",
-                state_reason: "not_planned"
-              });
+
+              const alreadyCommented = comments.some(comment => comment.body === botMessage);
+
+              if (!alreadyCommented) {
+                await github.rest.issues.createComment({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: context.payload.issue.number,
+                  body: botMessage
+                });
+                
+                await github.rest.issues.update({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: context.payload.issue.number,
+                  state: "closed",
+                  state_reason: "not_planned"
+                });
+              }
             }
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
