Revert "actual errors"
This reverts commit 515bcd033447ee1e762e7581598f9c93d5190204.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ android {
 
     defaultConfig {
         applicationId = "com.ryan.anymex"
-        minSdkVersion = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
