--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,22 +59,14 @@ android {
     buildTypes {
         release {
             signingConfig = signingConfigs.release
-
-            // --------------------------------------------------------
-            // R8 code shrinking + resource shrinking
-            // Reduces APK size by removing unused code and resources.
-            // proguard-rules.pro contains keep rules for Flutter,
-            // Firebase, Rust bridge, MPV, Kotlin, etc.
-            // --------------------------------------------------------
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
         debug {
-            // Keep debug builds fast — no shrinking
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
         }
     }
 }
