--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,8 +65,8 @@ android {
         }
 
         debug {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
