--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -639,12 +639,8 @@ jobs:
         if: matrix.platform == 'android'
         run: |
           flutter pub get
-          flutter build apk --split-per-abi \
-            --obfuscate \
-            --split-debug-info=build/debug-info
-          flutter build apk --release \
-            --obfuscate \
-            --split-debug-info=build/debug-info
+          flutter build apk --split-per-abi
+          flutter build apk --release
           cd build/app/outputs/flutter-apk
           mv app-armeabi-v7a-release.apk AnymeX-Android-armeabi-v7a.apk
           mv app-arm64-v8a-release.apk AnymeX-Android-arm64-v8a.apk
@@ -894,7 +890,7 @@ jobs:
       
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "artifacts/**/*,"
+          artifacts: "artifacts/**/*"
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
           tag: ${{ github.ref_name }}
