--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -586,6 +586,8 @@ jobs:
           SIMKL_CLIENT_SECRET: ${{ secrets.SIMKL_CLIENT_SECRET }}
           MAL_CLIENT_ID: ${{ secrets.MAL_CLIENT_ID }}
           MAL_CLIENT_SECRET: ${{ secrets.MAL_CLIENT_SECRET }}
+          KITSU_CLIENT_ID: ${{ secrets.KITSU_CLIENT_ID }}
+          KITSU_CLIENT_SECRET: ${{ secrets.KITSU_CLIENT_SECRET }}
           CALLBACK_SCHEME: ${{ secrets.CALLBACK_SCHEME }}
           GOOGLE_BOOKS_API_KEY: ${{ secrets.GOOGLE_BOOKS_API_KEY }}
           GIT_CLIENT_ID: ${{ secrets.GIT_CLIENT_ID }}
@@ -598,6 +600,8 @@ jobs:
           SIMKL_CLIENT_SECRET=$SIMKL_CLIENT_SECRET
           MAL_CLIENT_ID=$MAL_CLIENT_ID
           MAL_CLIENT_SECRET=$MAL_CLIENT_SECRET
+          KITSU_CLIENT_ID=$KITSU_CLIENT_ID
+          KITSU_CLIENT_SECRET=$KITSU_CLIENT_SECRET
           CALLBACK_SCHEME=$CALLBACK_SCHEME
           GOOGLE_BOOKS_API_KEY=$GOOGLE_BOOKS_API_KEY
           GIT_CLIENT_ID=$GIT_CLIENT_ID
